removed redundant useEffect from useProjectRows that caused projects to be fetched twice, fixed clear button for free search input by giving it a higher z-index

--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -40,3 +40,7 @@
 .search-form .search-form-content .input-wrapper#programmedYearMax {
   @apply col-span-1 row-start-6;
 }
+
+.free-search div div div button {
+  z-index: 10;
+}
